# iot-kinesis-lambda

./: .gitignore  Cargo.toml  README.md  simulate.sh
infrastructure/: .terraform.lock.hcl  main.tf
infrastructure/modules/consumer-lambda/: main.tf  variable.tf
infrastructure/modules/iot-topic/: main.tf  variable.tf
infrastructure/modules/kinesis-stream/: main.tf  output.tf  variable.tf
lambdas/consumer/: Cargo.toml
lambdas/consumer/events/: kinesis_valid_test_event.json
lambdas/consumer/src/: main.rs
