[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["kinesis"] }

lambda_runtime = "0.13.0"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1", features = ["macros"] }
